# Abschlussprojekt

./: README.md  main.py  pyproject.toml  requirements.txt
app_pages/: account.py  ekg_analysis.py  login.py  overview.py  registration.py  sleep_analysis.py
data/: person_db.json
data/activities/: activity.csv
data/smartwatch_data/: 20260707_125248_sleep_002.csv  20260707_170838_sleep_002_all_phases_apnea.csv  20260707_183937_sleep_test_04_unruhiger_schlaf.csv
data/test_datein/: sleep_test_01_perfekter_schlaf.csv  sleep_test_02_sehr_schlechter_schlaf.csv  sleep_test_03_schlafapnoe.csv  sleep_test_05_krank_erhoeht.csv
pages/: overview.py
src/: crypt.py  ekg_data.py  person.py  read_data.py  sleep_data.py
