[project]
name = "abschlussprojekt"
version = "0.1.0"
description = "Streamlit Abschlussprojekt"
authors = [
    {name = "Laurence und Jan", email = "aj9310@mci4me.at"},
]
dependencies = [
    "streamlit>=1.58.0",
    "pandas>=3.0.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "plotly>=6.8.0",
    "bcrypt>=5.0.0"
]
requires-python = ">=3.12,<3.14"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false